# p2p

./: .gitignore  .p2p.config  .p2p.config.example  LICENSE  Makefile  README.md  pyproject.toml
docs/: design.md
src/: __init__.py  __main__.py  api_client.py  api_client_anthropic.py  artifacts.py  continue_run.py  dry_run.py  logging_config.py  main.py  message_builder.py  pdf_preprocessor.py  postprocessor.py  pptx_assembler.py  provider_config.py  replay.py  system_prompt.py  token_estimator.py  tui.py  xml_validator.py
src/api/: __init__.py  anthropic_client.py  openai_client.py  openai_responses_client.py
src/prompts/: __init__.py  animation_en.md  animation_zh.md  system_en.md  system_zh.md
tests/: conftest.py  test_artifacts.py  test_continue_run.py  test_e2e.py  test_error_recovery.py  test_message_builder.py  test_misc.py  test_pdf_preprocessor.py  test_pptx_assembler.py  test_provider_config.py  test_system_prompt.py  test_token_estimator.py  test_unit.py  test_xml_validator.py
